# cesi

./: README_install.md  pyproject.toml  requirements.txt
cesi/: controllers.py  models.py  run.py
cesi/api/v2/: nodes.py
cesi/core/: cesi.py  node.py
cesi/ui/: package-lock.json  package.json
cesi/ui/src/: App.jsx
cesi/ui/src/common/helpers/: Processes.jsx
cesi/ui/src/common/views/: Header.jsx
cesi/ui/src/scenes/nodes/: NodesPage.jsx
cesi/ui/src/scenes/nodes/components/: FilterOfNodes.jsx
defaults/: cesi.conf.toml
