
[tool.poetry]
name = "cesi"
version = "2.7.1"
description = "CeSI is a web interface for managing multiple supervisors from the same place."
authors = ["swnumaster <swnumaster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
tomlkit = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
